--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -7,22 +7,32 @@ on:
     branches: [ main ]
 
 jobs:
-
   build:
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v2
+      - name: Check out code
+        uses: actions/checkout@v3
 
-    - name: Set up Go
-      uses: actions/setup-go@v2
-      with:
-        go-version: 1.21
+      - name: Set up Go
+        uses: actions/setup-go@v3
+        with:
+          go-version: 1.21
 
-    - name: Build
-      run: go build -race -v ./...
+      - name: Cache Go modules
+        uses: actions/cache@v3
+        with:
+          path: ~/go/pkg/mod
+          key: "${{ runner.os }}-go-${{ hashFiles('**/go.sum') }}-${{ github.run_id }}"
+          restore-keys: |
+            ${{ runner.os }}-go-
 
-    - name: Test
-      run: go test -race -v ./...
+      - name: Build
+        run: go build -race -v ./...
 
-    - name: Run golangci-lint
-      uses: golangci/golangci-lint-action@v2.5.1
+      - name: Test
+        run: go test -race -v ./...
+
+      - name: Run golangci-lint
+        uses: golangci/golangci-lint-action@v4
+        with:
+          version: latest
