--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -1,8 +1,10 @@
-name: Go
+name: Go and Docker Workflow
 
 on:
   push:
     branches: [ main ]
+    tags:
+      - 'v*'
   pull_request:
     branches: [ main ]
 
@@ -36,3 +38,33 @@ jobs:
         uses: golangci/golangci-lint-action@v4
         with:
           version: latest
+
+  # New job for Docker push
+  docker:
+    needs: build
+    runs-on: ubuntu-latest
+    if: github.event_name == 'push' && (github.ref == 'refs/heads/main' || startsWith(github.ref, 'refs/tags/v'))
+    steps:
+      - name: Check out code
+        uses: actions/checkout@v3
+
+      - name: Login to Docker Hub
+        uses: docker/login-action@v1
+        with:
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_ACCESS_TOKEN }}
+
+      - name: Build and push Docker image
+        uses: docker/build-push-action@v2
+        with:
+          context: .
+          file: ./Dockerfile
+          push: true
+          tags: |
+            clagraff/roxy:latest
+            clagraff/roxy:${{ steps.vars.outputs.tag }}
+        env:
+          TAG_NAME: ${{ github.ref_name }}
+
+      - name: Logout from Docker Hub
+        run: docker logout
